--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-.app{
-    @apply flex justify-between m-2 gap-x-1
+.nav-container{
+    @apply bg-red-500 px-4 py-2 flex justify-between items-center
+}
+
+.nav-container .logo{
+    @apply text-white text-2xl font-bold
+}
+
+.nav-container .nav-icon{
+    @apply flex justify-end
+}
+
+.nav-container .cart-icon p{
+    @apply flex items-center px-2 py-1 bg-white rounded-lg
+}
+
+.nav-container .cart-icon p span{
+    @apply flex items-center px-2 py-1 bg-white rounded-lg
 }
 
 .product-container{
-    @apply w-4/12 m-2 space-y-2
+    @apply m-2 space-y-2
 }
 .product-container .title{
     @apply text-center text-xl font-bold font-serif
@@ -18,23 +34,23 @@
 }
 
 .product_image{
-    @apply w-4/12
+    @apply w-4/12 flex justify-center items-center
 }
 
 .product_image img{
-    @apply h-24
+    @apply h-40
 }
 
 .product_details{
-    @apply w-8/12 flex justify-between items-center
+    @apply w-8/12 pl-2 space-y-2
 }
 
 .product_details button{
     @apply px-2 py-1 text-white bg-red-500 rounded
 }
 
-.product_details p .name{
-    @apply font-bold
+.product_details .name{
+    @apply font-bold text-blue-500 text-xl cursor-pointer
 }
 
 .product_details input{
@@ -48,7 +64,7 @@
     @apply w-8 h-8 px-2 py-1 text-white bg-red-500 rounded-full
 }
 .cart-container{
-    @apply w-8/12 m-2 space-y-2
+    @apply m-2 space-y-2
 }
 
 .cart-container .title{
